[package]
name = "esgi_arena_runner"
version = "0.1.0"
authors = ["LAURENT Louis <louis_laurent@aol.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.111"
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.6.0"
